# tiny-vector-db

./: README.md  embed.db  pyproject.toml  requirements.txt
tiny_vector_db/: embedding.py  ingest.py  scraper.py  search.py  utils.py
