[tool.poetry]
name = "tiny-vector-db"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bcembedding = "^0.1.3"
huggingface-hub = "^0.20.3"
scikit-learn = "^1.4.1.post1"
beautifulsoup4 = "^4.12.3"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
